crates/foundation/tests/snapshots/config_snapshots__render_complex_defaults.snap
---
source: crates/foundation/tests/config_snapshots.rs
expression: "Render::new(\"FOUNDATION\").defaults::<ComplexConfig>()"
---
# Human-readable service name.
# env: FOUNDATION__SERVICE_NAME
service_name: foundation-example

# Logging configuration.
logging:

  # Enables JSON logs.
  # env: FOUNDATION__LOGGING__JSON
  json: false

  # Minimum log level to emit.
  # env: FOUNDATION__LOGGING__LEVEL
  level: info

  # Additional log targets to enable.
  # env: FOUNDATION__LOGGING__EXTRA_TARGETS
  extra_targets: []

# Gateway configuration.
gateway:

  # Public HTTP gateway.
  http:

    # Primary upstream endpoint.
    endpoint:

      # Base URL for upstream requests.
      # env: FOUNDATION__GATEWAY__HTTP__ENDPOINT__BASE_URL
      base_url: https://api.example.invalid/
