crates/foundation/tests/snapshots/config_snapshots__render_complex_required.snap
---
source: crates/foundation/tests/config_snapshots.rs
expression: "Render::new(\"FOUNDATION\").required::<ComplexConfig>()"
---
# Port to bind.
# env: FOUNDATION__PORT
port: <required>
