crates/foundation/tests/snapshots/config_snapshots__render_no_prefix_template.snap
---
source: crates/foundation/tests/config_snapshots.rs
expression: out
---
# Service display name.
# env: NAME
name: foundation

# Port to bind.
# env: PORT
port: <required>

# Logging settings.
logging:

  # Enables JSON logging.
  # env: LOGGING__JSON
  json: false

  # Optional extra targets.
  # env: LOGGING__EXTRA_TARGETS
  extra_targets: []

# Optional labels.
# env: LABELS
labels: {}
