crates/foundation/tests/snapshots/config_snapshots__render_required_fields_list.snap
---
source: crates/foundation/tests/config_snapshots.rs
expression: listing
---
port (env: FOUNDATION__PORT)
