crates/foundation/tests/snapshots/config_snapshots__render_simple_required.snap
---
source: crates/foundation/tests/config_snapshots.rs
expression: "Render::new(\"APP\").required::<SimpleConfig>()"
---
# Port to bind.
# env: APP__PORT
port: <required>
