crates/foundation/tests/snapshots/config_snapshots__render_simple_template.snap
---
source: crates/foundation/tests/config_snapshots.rs
expression: "Render::new(\"APP\").template::<SimpleConfig>()"
---
# Service display name.
# env: APP__NAME
name: foundation

# Port to bind.
# env: APP__PORT
port: <required>

# Logging settings.
logging:

  # Enables JSON logging.
  # env: APP__LOGGING__JSON
  json: false

  # Optional extra targets.
  # env: APP__LOGGING__EXTRA_TARGETS
  extra_targets: []

# Optional labels.
# env: APP__LABELS
labels: {}
